--- a/exercitando/style.css
+++ b/exercitando/style.css
@@ -5,29 +5,65 @@
 
 body{
     height: auto;
-    background-image: url(https://i.pinimg.com/originals/82/4b/87/824b877bf4c731e3fcc13a8881c3e982.jpg);
+    background-image: url(assets/wallpapersden.com_small-memory_1920x1080.jpg);
     background-repeat: no-repeat;
     background-position: center center;
+    background-size: auto;
 }
 main{
-    
-  
+    display: flex;
+    margin-left: 20%;
+    margin-right: 20%;
+}
 
-}   
+.container { 
+    width: 700px; 
+    margin-top: 20%;
+    margin-left: auto;
+    margin-right: auto; 
+}
+h1{
+    font-family: arial;
+}
+.paragrafo{
+    font-family: 'Times New Roman', Times, serif;
+    color: white;
+    font-size: 22px;
+    background-color: rgba(0, 0, 0, 0.781);
+    padding: 30px;
+    border-radius: 62px;
+
+}
 header{
-    background-color: #b6abf5;
-    padding: 20px;
+    background-color: #140c0c;
+    padding: 12px;
     text-align: center;
 
     font-family: Helvetica;
-    color: white;
+    color: #a9caff;
+}
+
+footer {
+    position: fixed;
+    bottom:0;
+    left:0;
 }
 
 footer{
-    background-color: #b6abf5;
-    padding: 20px;
+    width: 100%;
+    background-color: #140c0c;
+    padding: 12px;
     text-align: center;
 
     font-family: Helvetica;
-    color: white;
+    color: #a9caff;
+}
+
+footer img{
+    
+    display: inline;
+    position: relative;
+    bottom: 40px;
+    left: 237px;
+    width: 50px;
 }
